# SPL.py

./: .gitignore  README.md  example.env  pyproject.toml
.igrid/: hub.sqlite3-shm  hub.sqlite3-wal
.serena/: project.yml
NeurIPS-26-lab/: README.md  claude_cli-S7.sh  claude_cli-S8910.sh  notes.md  openrouter-claude-S1.sh  openrouter-claude-S7.sh  openrouter-claude-S8910.sh  requirements.txt  review-by-claude-2026-05-06.md  shortlist-models.md
backup/: chroma.sqlite3
cookbook/: README-go.md  README-recipe.md  README-ts.md  README.md  analyze_logs.py  cookbook_catalog-go.json  cookbook_catalog-ts.json  cookbook_catalog.json  run_all.py  run_all_single_gpu-wen.sh  run_all_single_gpu.sh  run_cookbook_on_momagrid.sh  spl2mmd_batch.py  spl2spec_batch.py
cookbook-langgraph/: readme-migration.md
cookbook-pocketflow/: cookbook_catalog.json  migrate_pocketflow.py  migrate_pocketflow.sh  phase1_migrate.sh  readme-migration.md  readme-nodejs-upgrade.md  tool_api_registry.md  validate_all.py
cookbook-pocketflow-gemini/: README.md
examples/: hello_world.spl  react_agent.spl  safe_generation.spl  self_refine.spl
graphify-out/: .graphify_cached.json  .graphify_chunk_001.json  .graphify_chunk_001_files.txt  .graphify_chunk_002.json  .graphify_chunk_002_files.txt  .graphify_chunk_003.json  .graphify_chunk_003_files.txt  .graphify_chunk_004.json  .graphify_chunk_004_files.txt  .graphify_chunk_005.json  .graphify_chunk_005_files.txt  .graphify_chunk_006.json  .graphify_chunk_006_files.txt  .graphify_chunk_007.json  .graphify_chunk_007_files.txt  .graphify_chunk_008.json  .graphify_chunk_008_files.txt  .graphify_chunk_009.json  .graphify_chunk_009_files.txt  .graphify_chunk_010.json  .graphify_chunk_010_files.txt  .graphify_chunk_011.json  .graphify_chunk_011_files.txt  .graphify_chunk_012.json  .graphify_chunk_012_files.txt  .graphify_chunk_013.json  .graphify_chunk_013_files.txt  .graphify_chunk_014.json  .graphify_chunk_014_files.txt  .graphify_chunk_015.json  .graphify_chunk_015_files.txt  .graphify_chunk_016.json  .graphify_chunk_016_files.txt  .graphify_chunk_017.json  .graphify_chunk_017_files.txt  .graphify_chunk_018.json  .graphify_chunk_018_files.txt  .graphify_chunk_019.json  .graphify_chunk_019_files.txt  .graphify_chunk_020.json  (+101 more)
neurips-experiments/: experiment-notes.md  readme-claude.md  readme-gemini.md  readme-openrouter.md  readme.md
scripts/: README-concept_graph.md  concept_graph.py  detect_thinking_mode.py  ollama_proxy.spl
spl/: analyzer.py  ast_nodes.py  cli.py  executor.py  lexer.py  optimizer.py  parser.py  stdlib.py  text2spl.py
spl3/: _loader.py  ast_nodes.py  cli.py  code_rag.py  composer.py  event.py  executor.py  image_ops.py  kernel.py  lean_bridge.py  linter.py  mcp_bridge.py  parser.py  spl2mmd.py  tool_api_registry.py
tests/: readme-spl3-compare.md  test_adapters.py  test_cache.py  test_chinese_characters_domain.py  test_cli.py  test_english_morphology_domain.py  test_executor.py  (+19 more)
(+3147 files in other folders)
