[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl-llm"
version = "3.1.0"
description = "SPL — A Declarative Language for Agentic LLM Workflow Orchestration"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Wen Gong", email = "p2p2learn@outlook.com"},
]
keywords = [
    "llm", "agentic-ai", "workflow", "orchestration", "dsl",
    "prompt-engineering", "multi-agent", "declarative", "spl",
    "langchain", "langgraph", "ollama", "openai", "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    # dd-* ecosystem (all published on PyPI)
    "dd-llm[openai]>=0.1.0",
    "dd-vectordb>=0.1.0",
    "dd-embed>=0.1.0",
    "dd-cache>=0.1.0",
    "dd-config>=0.1.0",
    "dd-extract>=0.1.0",
    "dd-db>=0.1.0",
    "dd-logging>=0.1.2",
    # LLM provider SDKs
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "streamlit-aggrid>=1.0.5",
    "streamlit-ace>=0.1.1",
    "chromadb>=0.5",
]
kernel = [
    "ipython>=8.0",
    "ipykernel>=6.0",
    "jupyter_client>=8.0",
]
sage = [
    # SageMath as pip wheels (passagemath fork — resolves wheels-only, no source build).
    # After install, register the 'sagemath' Jupyter kernel spec:
    #   python -m sage.repl.ipython_kernel.install --user
    # then run workflows under it:
    #   spl3 run workflow.spl --kernel-name sagemath
    # Conda alternative (distro-native Sage): conda install -c conda-forge sage
    "passagemath-standard>=10.8",
    "ipykernel>=6.0",
    "jupyter_client>=8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "build>=1.0",
    "twine>=5.0",
    "ddgs>=6.0",
    "duckduckgo_search>=6.0",
]

[project.urls]
Homepage = "https://github.com/digital-duck/SPL.py"
Repository = "https://github.com/digital-duck/SPL.py"
Documentation = "https://github.com/digital-duck/SPL.py/blob/main/README.md"
"Bug Tracker" = "https://github.com/digital-duck/SPL.py/issues"
"arXiv Paper" = "https://arxiv.org/abs/2602.21257"

[project.scripts]
spl3 = "spl3.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spl*"]

[tool.setuptools.package-data]
"spl3" = ["_skill/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
